<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes...</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Background Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_link_url">Add Link URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_note">Are you sure you want to delete this note?</string>
    <string name="add_time_reminder">Add Time Reminder</string>
    <string name="date_and_time">Date And Time</string>
    <string name="select">SELECT</string>
    <string name="text_color">Text Color</string>
    <string name="text_style_note_content">Text Style Note Content</string>
    <string name="text_style_note_title">Text Style Note Title</string>
    <string name="add_voice_recorder">Add Voice Recorder</string>
    <string name="recording">Playing Record</string>
    <string name="file_name">File Name</string>
    <string name="enter_file_name_here">Enter file name here...</string>
</resources>