<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddURLDialog"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">
    
    <ImageView
        android:id="@+id/imageWebLink"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_web"
        android:tint="@color/colorIcons"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_link_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageWebLink"
        app:layout_constraintStart_toEndOf="@id/imageWebLink"
        app:layout_constraintTop_toTopOf="@id/imageWebLink"
        android:includeFontPadding="false"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLinkURL"
        android:hint="@string/enter_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:textColorHint="@color/colorTextHint"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        app:layout_constraintTop_toBottomOf="@id/imageWebLink"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:imeOptions="actionDone"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAddURL"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/inputLinkURL"
        app:layout_constraintTop_toBottomOf="@id/inputLinkURL"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:text="@string/cancel"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAddURL"
        app:layout_constraintTop_toBottomOf="@id/inputLinkURL"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>