<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddVoiceRecorderDialog"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageMic"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_mic"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:tint="@color/colorIcons" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_voice_recorder"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageMic"
        app:layout_constraintStart_toEndOf="@id/imageMic"
        app:layout_constraintTop_toTopOf="@id/imageMic"
        android:includeFontPadding="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputFileName"
        android:hint="@string/enter_file_name_here"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageMic"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@null"
        android:inputType="text"
        android:autofillHints="@string/app_name"
        android:includeFontPadding="false"/>

   <Chronometer
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/_18sdp"
       android:fontFamily="@font/harmonia_bold"
       android:textColor="@color/colorWhite"
       android:layout_marginTop="@dimen/_10sdp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/inputFileName"
       android:id="@+id/cmRecorder"/>

    <ImageButton
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/background_stop_recording"
        android:src="@drawable/ic_mic"
        app:layout_constraintTop_toBottomOf="@id/cmRecorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/imageRecordVoice"
        android:contentDescription="@string/app_name"
        app:tint="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAddVoiceRecorder"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageRecordVoice"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:text="@string/cancel"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAddVoiceRecorder"
        app:layout_constraintTop_toBottomOf="@id/imageRecordVoice"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>