<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"
    android:layout_margin="@dimen/_10sdp"
    android:id="@+id/layoutDeleteNoteDialog">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:tint="@color/colorWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDeleteNoteMessage"
        android:text="@string/are_you_sure_you_want_to_delete_note"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/_12sdp"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDeleteNote"
        android:text="@string/delete_note"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="true"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:includeFontPadding="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCancelDeleteNote"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:includeFontPadding="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>