<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:clipToPadding="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
             <ImageView
                 android:id="@+id/imageBack"
                 android:layout_width="@dimen/_24sdp"
                 android:layout_height="@dimen/_24sdp"
                 android:src="@drawable/ic_back"
                 android:tint="@color/colorIcons"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:contentDescription="@string/app_name"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imageDone"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/background_done_button"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/inputNoteTitle"
                android:hint="@string/note_title"
                android:textColorHint="@color/colorTextHint"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_22sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                android:background="@null"/>

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorIcons"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputTextSubNote"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewSubTitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"/>

            <View
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:id="@+id/viewSubTitleIndicator"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_note_indicator"
                app:layout_constraintTop_toTopOf="@id/inputTextSubNote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/inputTextSubNote"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageNote"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/inputTextSubNote"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputNoteContent"
                android:hint="@string/type_note_here"
                android:textColorHint="@color/colorTextHint"
                android:fontFamily="@font/ubuntu_regular"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:minHeight="@dimen/_100sdp"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/layout_miscellaneous"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>